TPLUNLIMITED-220 #resolve align with all content

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1425,9 +1425,6 @@ code{
 div {
 
 	div.lifestream{
-		margin-left: auto;
-		margin-right: auto;
-		width: 90%;
 		ul.stream{
 			box-shadow: none;
 			background-color: transparent;
